--- a/compare.html
+++ b/compare.html
@@ -90,24 +90,24 @@
                 </div>
             </div>
             <div class="doenHdCont notHomeDoen">
-                <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
+                 <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" data-endpoint="ring.html|bracelet.html|nacklace.html|earring.html" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Categories
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Earrings</a></li>
                             <li><a class="dropdown-item" href="./ring.html">Ring</a></li>
-                            <li><a class="dropdown-item" href="#">Bracelets</a></li>
+                           <li><a class="dropdown-item" href="./bracelet.html">Bracelets</a></li>
                             <li><a class="dropdown-item" href="#">Necklace</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./arrival.html">New arrival</a>
+                        <a class="nav-link active" data-endpoint="new-arrival.html" aria-current="page" href="./new-arrival.html">New arrival</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" data-endpoint="ranisa.html" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Collection
                         </a>
@@ -116,7 +116,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./gift.html">Gift a diamond</a>
+                        <a class="nav-link"  data-endpoint="gift.html"  href="./gift.html">Gift a diamond</a>
                     </li>
                 </ul>
             </div>
@@ -182,53 +182,53 @@
                     <p class="smallTxtNewProd mb-3 txtFadedAll">
                         Product code : xxxxxxxx
                     </p>
-                    <div class="another_prod_table d-flex">
-                        <div class="another_first_table txtFadedAll">
+                    <div class="item_prod_table d-flex">
+                        <div class="item_first_table txtFadedAll">
                             <table>
-                                <tr class="another_prod_tr shadedTr_another">
-                                    <td class="another_prod_td">SHAPE:</td>
-                                    <td class="another_prod_td">Round</td>
+                                <tr class="shadedTr_item">
+                                    <td class="item_prod_td">SHAPE:</td>
+                                    <td class="item_prod_td">Round</td>
                                 </tr>
-                                <tr class="another_prod_tr">
-                                    <td class="another_prod_td">CARAT:</td>
-                                    <td class="another_prod_td">17.44</td>
+                                <tr>
+                                    <td class="item_prod_td">CARAT:</td>
+                                    <td class="item_prod_td">17.44</td>
                                 </tr>
-                                <tr class="another_prod_tr shadedTr_another">
-                                    <td class="another_prod_td">COLOUR:</td>
-                                    <td class="another_prod_td">D</td>
+                                <tr class="shadedTr_item">
+                                    <td class="item_prod_td">COLOUR:</td>
+                                    <td class="item_prod_td">D</td>
                                 </tr>
-                                <tr class="another_prod_tr">
-                                    <td class="another_prod_td">CLARITY:</td>
-                                    <td class="another_prod_td">VVS1</td>
+                                <tr>
+                                    <td class="item_prod_td">CLARITY:</td>
+                                    <td class="item_prod_td">VVS1</td>
                                 </tr>
-                                <tr class="another_prod_tr shadedTr_another">
-                                    <td class="another_prod_td">CUT:</td>
-                                    <td class="another_prod_td">V.Good</td>
+                                <tr class="shadedTr_item">
+                                    <td class="item_prod_td">CUT:</td>
+                                    <td class="item_prod_td">V.Good</td>
                                 </tr>
                             </table>
                         </div>
-                        <div class="another_second_table txtFadedAll">
+                        <div class="item_second_table txtFadedAll">
                             <table>
-                                <tr class="another_prod_tr shadedTr_another">
-                                    <td class="another_prod_td">POLISH:</td>
-                                    <td class="another_prod_td">V.Good</td>
+                                <tr class="shadedTr_item">
+                                    <td class="item_prod_td">POLISH:</td>
+                                    <td class="item_prod_td">V.Good</td>
                                 </tr>
-                                <tr class="another_prod_tr">
-                                    <td class="another_prod_td">SYMMETRY:</td>
-                                    <td class="another_prod_td">V.Good</td>
+                                <tr>
+                                    <td class="item_prod_td">SYMMETRY:</td>
+                                    <td class="item_prod_td">V.Good</td>
                                 </tr>
-                                <tr class="another_prod_tr shadedTr_another">
-                                    <td class="another_prod_td">CERT:</td>
-                                    <td class="another_prod_td">IGI</td>
+                                <tr class="shadedTr_item">
+                                    <td class="item_prod_td">CERT:</td>
+                                    <td class="item_prod_td">IGI</td>
                                 </tr>
-                                <tr class="another_prod_tr">
-                                    <td class="another_prod_td">FLUOR:</td>
-                                    <td class="another_prod_td">Faint</td>
+                                <tr>
+                                    <td class="item_prod_td">FLUOR:</td>
+                                    <td class="item_prod_td">Faint</td>
                                 </tr>
-                                <tr class="another_prod_tr shadedTr_another">
-                                    <td class="another_prod_td">CERT. NO.</td>
-                                    <td class="another_prod_td">211056M</td>
-                                </tr>
+                                <!-- <tr class="shadedTr_item">
+                                    <td class="item_prod_td">CERT. NO.</td>
+                                    <td class="item_prod_td">211056M</td>
+                                </tr> -->
                             </table>
                         </div>
                     </div>
@@ -376,10 +376,32 @@
             let headerImgJs = document.getElementById('headerImgJs');
             let headerImg2Js = document.getElementById('headerImg2Js');
             let position = window.scrollY > 0;
-            wholeHeader.classList.toggle('custHeadClass', position);
+            // wholeHeader.classList.toggle('custHeadClass', position);
 
-            !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
-            position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
+            // !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
+            // position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
+
+            if(position){
+                headerImgJs.style.opacity = '0';
+                headerImgJs.style.transition = '.1s ease-in-out'
+                setTimeout(() => {
+                    wholeHeader.classList.add('custHeadClass'); 
+                    headerImgJs.style.display = 'none';
+                    headerImg2Js.style.opacity = 'unset';
+                    headerImg2Js.style.display = 'block'
+                }, 200);
+            }
+           else{
+                headerImg2Js.style.opacity = '0';
+                headerImg2Js.style.transition = '.1s ease-in-out';
+                setTimeout(() => {
+                    wholeHeader.classList.remove('custHeadClass'); 
+                    headerImg2Js.style.display = 'none';
+                    headerImgJs.style.opacity = 'unset';
+                    headerImgJs.style.display = 'block';
+                }, 200);
+            }
+      
 
         });
 
