--- a/orderplaced.html
+++ b/orderplaced.html
@@ -87,24 +87,24 @@
                 </div>
             </div>
             <div class="doenHdCont notHomeDoen">
-                <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
+                 <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" data-endpoint="ring.html|bracelet.html|nacklace.html|earring.html" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Categories
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Earrings</a></li>
                             <li><a class="dropdown-item" href="./ring.html">Ring</a></li>
-                            <li><a class="dropdown-item" href="#">Bracelets</a></li>
+                           <li><a class="dropdown-item" href="./bracelet.html">Bracelets</a></li>
                             <li><a class="dropdown-item" href="#">Necklace</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./arrival.html">New arrival</a>
+                        <a class="nav-link active" data-endpoint="new-arrival.html" aria-current="page" href="./new-arrival.html">New arrival</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" data-endpoint="ranisa.html" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Collection
                         </a>
@@ -113,7 +113,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./gift.html">Gift a diamond</a>
+                        <a class="nav-link"  data-endpoint="gift.html"  href="./gift.html">Gift a diamond</a>
                     </li>
                 </ul>
             </div>
